--- a/PackmanApp/res/layout/fragment_main_dummy.xml
+++ b/PackmanApp/res/layout/fragment_main_dummy.xml
@@ -8,9 +8,10 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".MainActivity$DummySectionFragment" >
 
-    <TextView
-        android:id="@+id/section_label"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <ListView
+            android:id="@+id/allPackages"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" >
+        </ListView>
 
 </RelativeLayout>
