initial check in of the login dialog
got a way to temporarily show the login dialog.

--- a/PackmanApp/res/layout/fragment_main_dummy.xml
+++ b/PackmanApp/res/layout/fragment_main_dummy.xml
@@ -9,6 +9,7 @@
     tools:context=".MainActivity$DummySectionFragment" >
 
     <ListView
+        android:visibility="invisible"
             android:id="@+id/allPackages"
             android:layout_width="match_parent"
             android:layout_height="match_parent" >
