show appropriate toasts when the user interacts with the app

--- a/PackmanApp/res/layout/login_dialog.xml
+++ b/PackmanApp/res/layout/login_dialog.xml
@@ -10,7 +10,7 @@
         android:background="#333333"
         android:contentDescription="@string/app_name" />
     <TextView
-        android:text="@string/login_message"
+        android:text="@string/app_name"
         android:layout_width="match_parent"
         android:gravity="center"
         android:background="#333333"
