--- a/PackmanApp/res/layout/login_dialog.xml
+++ b/PackmanApp/res/layout/login_dialog.xml
@@ -1,43 +1,51 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:background="#333333"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
+
     <ImageView
-        android:src="@drawable/login"
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:scaleType="center"
         android:background="#333333"
-        android:contentDescription="@string/app_name" />
+        android:contentDescription="@string/app_name"
+        android:scaleType="center"
+        android:src="@drawable/login" />
+
     <TextView
         android:text="@string/app_name"
         android:layout_width="match_parent"
         android:gravity="center"
         android:background="#333333"
         android:textSize="32sp"
-        android:textColor="#ffffff"
         android:layout_marginBottom="8dp"
         android:padding="12dip"
+        android:textColor="@android:color/holo_blue_light"
         android:layout_height="wrap_content"/>
+
     <EditText
         android:id="@+id/username"
-        android:inputType="textEmailAddress"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:layout_marginBottom="4dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:layout_marginBottom="4dp"
-        android:hint="@string/username" />
+        android:layout_marginTop="16dp"
+        android:hint="@string/username"
+        android:inputType="textEmailAddress"
+        android:textColor="@android:color/holo_blue_light" />
+
     <EditText
         android:id="@+id/password"
-        android:inputType="textPassword"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginBottom="16dp"
         android:layout_marginLeft="4dp"
         android:layout_marginRight="4dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="4dp"
         android:fontFamily="sans-serif"
-        android:hint="@string/password"/>
+        android:hint="@string/password"
+        android:inputType="textPassword"
+        android:textColor="@android:color/holo_blue_light" />
+
 </LinearLayout>
