--- a/PackmanApp/res/layout/simplerow.xml
+++ b/PackmanApp/res/layout/simplerow.xml
@@ -1,7 +1,31 @@
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"  
- android:id="@+id/rowTextView"   
- android:layout_width="fill_parent"   
- android:layout_height="wrap_content"  
- android:padding="10dp"  
- android:textSize="16sp" >  
-</TextView> 
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="?android:attr/listPreferredItemHeight"
+    android:padding="6dip">
+    <ImageView
+        android:id="@+id/icon"
+        android:layout_width="45dip"
+        android:layout_height="fill_parent"
+        android:layout_marginRight="6dip" />
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="0dip"
+        android:layout_weight="1"
+        android:layout_height="fill_parent">
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="fill_parent"
+            android:layout_height="0dip"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:text="My Application" />
+        <TextView  
+            android:layout_width="fill_parent"
+            android:id="@+id/description"
+            android:layout_height="0dip"
+            android:layout_weight="1" 
+            android:singleLine="true"
+            android:ellipsize="marquee"
+            android:text="Simple application that shows how to use RelativeLayout" />
+    </LinearLayout>
+</LinearLayout>
